fixed SCSS semicolons in .vue files, removed jquery requirement from bad merge of another fork

--- a/resources/assets/sass/partials/_mixins.scss
+++ b/resources/assets/sass/partials/_mixins.scss
@@ -15,6 +15,17 @@
   }
 }
 
+@mixin genre-wrapper() {
+  justify-content: space-between;
+  flex-wrap: wrap;
+  display: flex;
+  align-content: flex-start;
+
+  .item {
+     align-self: flex-start;
+  }
+}
+
 @mixin artist-album-card() {
   .item {
     flex-direction: column;
